--- a/src/app/components/cargas/list-carga/list-carga.component.html
+++ b/src/app/components/cargas/list-carga/list-carga.component.html
@@ -27,8 +27,6 @@
   </tbody>
 </table>
 
-
-<app-new-carga>
-  <app-edit-carga></app-edit-carga>
-</app-new-carga>
+<app-new-carga></app-new-carga>
+<app-edit-carga></app-edit-carga>
 
