--- a/src/app/components/cargas/new-carga/new-carga.component.html
+++ b/src/app/components/cargas/new-carga/new-carga.component.html
@@ -1,7 +1,15 @@
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <ng-content #name></ng-content>
+<form (submit)="addCarga()">
+  <app-modal>
+      <h5 class="modal-title" modal-title>Modal title</h5>
 
-  </div>
-</div>
+      <div class="modal-body" modal-body>
+        New
+      </div>
+
+      <div class="modal-footer" modal-footer>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Save changes</button>
+      </div>
+
+  </app-modal>
+</form>
