--- a/src/app/components/cargas/new-carga/new-carga.component.html
+++ b/src/app/components/cargas/new-carga/new-carga.component.html
@@ -1,12 +1,12 @@
 <form (submit)="addCarga()">
   <app-modal>
-      <h5 class="modal-title" modal-title>Modal title</h5>
+      <h5 modal-title>Nova Carga</h5>
 
-      <div class="modal-body" modal-body>
+      <div modal-body>
         New
       </div>
 
-      <div class="modal-footer" modal-footer>
+      <div modal-footer>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-primary">Save changes</button>
       </div>
